# function-action

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yaml  pyproject.toml
.github/workflows/: pr.yaml
src/: checks.py  config.py  function.py  index.py  schedule.py
tests/: conftest.py  test_config.py  test_function.py  test_schedule.py
tests/configs/: valid_schedule.yml
tests/test_files/: config1.yaml  config3.yaml  config4.yaml  config5.yaml  config6.yaml  config7.yaml
